Created logic that allows mentor to sign up

--- a/Testapp/templates/register.html
+++ b/Testapp/templates/register.html
@@ -3,5 +3,7 @@
 <div class="container">
     <h1>Sign Up Here</h1>
     <button class="btn btn-sm btn-danger mt-4"><a href="{% url 'learner_signup'%}">Learner Sign Up</a></button>
+    <button class="btn btn-sm btn-danger mt-4"><a href="{% url 'mentor_signup'%}">Mentor Sign Up</a></button>
+
 </div>
 {% endblock %}
