Styled the buttons and pages

--- a/Testapp/templates/index.html
+++ b/Testapp/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1 align="center">WELCOME TO LEARNER - MENTOR CONNECTION</h1>
-<button style="color:white" class="btn btn-sm btn-danger mt-4"><a href="{% url 'Signup'%}">Click to register as Mentor or Learner</a></button>
+<button style="margin-left: 42%;" class="btn btn-sm btn-danger mt-4"><a style="color: white;" href="{% url 'Signup'%}">Click to register as Mentor or Learner</a></button>
 
 {% endblock %}
