--- a/Testapp/templates/signup.html
+++ b/Testapp/templates/signup.html
@@ -1,9 +1,9 @@
 {%extends 'base.html'%}
 {% block content%}
 <br><br>
-<div class="container"style="margin-top:0.2%;color:white;margin-left:3%;background-color: black;width:max-content;border-style:ridge;box-shadow: 0 3px 10px rgb(0 0 0/1);">
+<div class="container"style="margin-top:0.2%;">
     <br>
-<form method="POST" style="margin-left:10%;" accept-charset="utf-8">
+<form method="POST" accept-charset="utf-8">
     {% csrf_token %}
     {{form.as_p}}
     <button type="submit" class="btn btn-sm btn-danger mt-4">Sign Up</button>
